# Nexara

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  app.js  build-release.bat  build-release.ps1  create-release.md  index.html  replace.py  run-app-final.ps1  run-schoolmate-fixed.ps1  run-schoolmate.ps1  style.css  upload-release.bat
.agent/skills/managing-notebooklm-research/: SKILL.md
.playwright-cli/: page-2026-03-09T12-53-30-763Z.yml  page-2026-03-09T12-54-11-574Z.yml  page-2026-03-09T12-55-15-444Z.yml
ai_backend/: main.py  requirements.txt
ai_backend/routers/: chat.py  ocr.py  rag.py  telegram_bot.py
docs/: patch-1.2.2-notebook-architecture.md  sqlite-schema-phase1.sql
frontend/: next.config.mjs  package-lock.json  package.json  server.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/context-map/: page.tsx
frontend/app/graph/: page.tsx
frontend/app/notebook/: page.tsx
frontend/app/planner/: page.tsx
frontend/app/roadmap/: page.tsx  roadmap.css
frontend/app/schedule/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: app-shell.tsx  auth-modal.tsx  coming-soon.tsx  nexara-header.tsx  workspace-card.tsx
frontend/lib/: export-service.ts  markdown-link-indexer.ts  tauri-bridge.ts  tauri-provider.tsx
frontend/public/: app.js  chat.html  chat.js  index.html  notebook.html  notebook.js  planner.html  planner.js  schedule.html  schedule.js  settings.html  styles.css  textbooks.html
frontend/workers/: markdown-link-parser.worker.ts
go_backend/: go.mod  go.sum  main.go
python_ai/: agent.py  ai_engine.py  python_agent.py  requirements.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs  main.rs  professional_schema.rs
supabase/: schema.sql
tools/: generate_branding.py
web/: app.js  index.html  style.css
wiki/: Roadmap.md
(+8 files in other folders)
