[workspace]
resolver = "2"
members = ["src-tauri"]

[workspace.dependencies]
# Tauri 2.0
tauri = { version = "2.0", features = ["rustls-tls"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-log = "2.0"

# Async и concurrency
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Сериализация и конфигурация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "=0.4.31", features = ["serde"] }

# Логирование и ошибки
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# База данных
rusqlite = { version = "0.30", features = ["bundled"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[profile.dev]
lto = false
opt-level = 0
codegen-units = 256
