[package]
name = "schoolmate-proto"
version = "0.2.0"
description = "Cross-platform school assistant prototype built with Tauri"
authors = ["Codex"]
edition = "2021"

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-fs = "2.4.4"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-notification = "2.3.1"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22.1"
sha2 = "0.10.9"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[[bin]]
name = "schoolmate-proto"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
